# TRACE

./: .gitignore  LICENSE  README.md  config.yaml  download_ckpt.sh  pyproject.toml  run_submit.sh  setup_env.sh  trace_config.py
ckpt/: README.md
core/: data_metrics.py
dataset/: __init__.py  ddlx_annotations.py
infer/: caption_qwen_vllm.py  patch_vllm_for_qwen.py  predict_loc.py  serve_qwen_vllm.sh
models/: __init__.py  trace.py
submit/: package_submit.py  validate_submit.py
train/: train_backbone.py  train_trace.py
