[project]
name = "trace-ddlx"
version = "1.0.0"
description = "TRACE: Token Reference Attention for Auditable Deepfake Region Localization (DDL-X / IJCAI 2026 Track 3)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pillow>=10.0",
  "scikit-learn>=1.4",
  "timm>=0.9.16",
  "torch>=2.7,<2.9",
  "torchvision",
  "opencv-python-headless>=4.9",
  "pyyaml>=6.0",   # config.yaml loader
  "gdown>=5.0",    # download weights from Google Drive (download_ckpt.sh)
  "matplotlib>=3.7", # training loss/metric curves
  # caption stage (mode B): Qwen3-VL-8B served by vLLM
  # NOTE: vllm 0.11.0 needs the transformers 5.9.x tokenizer API (5.10+ removed
  # all_special_tokens_extended -> vllm tokenizer init crashes). Pin to the proven combo.
  "vllm==0.11.0",
  "transformers==5.9.0",
  "qwen-vl-utils>=0.0.14",
  "modelscope>=1.37.1",
  "accelerate>=1.13.0",
  # starlette 1.3+ broke vllm's prometheus-fastapi-instrumentator route naming (every request -> 500).
  # Pin to the combo that serves cleanly.
  "fastapi==0.136.3",
  "starlette==1.2.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
